player entity updating added